# Programacion-y-Control-CanSat-2026

./: README.md
Estacion_Terrena/Interfaz/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  model_eggs_ui.sln
Estacion_Terrena/Interfaz/Assets/Fonts/Neptune-Lander/: license.txt
Estacion_Terrena/Interfaz/Styles/: AppDefaultStyles.axaml
Estacion_Terrena/Receptor_ESP32/: Receptor_ESP32.ino  Receptor_ESP32_XIAO.ino  Receptor_XIAO.ino
Estacion_Terrena/Receptor_ESP32/Receptor_XIAO/: Receptor_XIAO.ino
Estacion_Terrena/Receptor_XIAO/Receptor_XIAO/: Receptor_XIAO.ino
Extra/FSK_Arduino/receptor/: receptor.ino
Firmware/: .gitignore  .mxproject  CanSat_Final.ioc
Firmware/CanSat_Final/: CMakeLists.txt  CMakePresets.json  CanSat_Final.ioc
Firmware/CanSat_Final/Core/Inc/: sx1278.h
Firmware/CanSat_Final/Core/Src/: gpio.c  main.c  usart.c
Firmware/CanSat_Final/archivos/: MainWindow.axaml.cs  Program.cs
Firmware/CanSat_Final/cmake/stm32cubemx/: CMakeLists.txt
Firmware/Core/Inc/: main.h  stm32f4xx_hal_conf.h  sx1278.h  telemetry.h
Firmware/Core/Src/: gpio.c  main.c  spi.c  stm32f4xx_it.c  sx1278.c  telemetry.c
Firmware/ESP32_CAM/model_eggs_ui/: MainWindow.axaml  MainWindow.axaml.cs  app.manifest  model_eggs_ui.csproj
Firmware/OBC_CanSat_Final/: .mxproject
Firmware/OBC_CanSat_Final/Core/Inc/: main.h
Firmware/OBC_CanSat_Final/Core/Src/: gpio.c  main.c
Firmware/OBC_STM32/: .cproject  .mxproject  .project  OBC_STM32 Debug.launch  OBC_STM32.ioc
Firmware/OBC_STM32/Core/Inc/: main.h  sensors.h  stm32f4xx_it.h  sx1278.h  telemetry.h
Firmware/OBC_STM32/Core/Src/: main.c  sensors.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  sx1278.c  telemetry.c
Firmware/OBC_STM32/Debug/: OBC_STM32.elf  OBC_STM32.list  OBC_STM32.map  makefile  objects.list
Firmware/OBC_STM32/Debug/Core/Src/: main.cyclo  main.d  main.su  sensors.cyclo  sensors.d  sensors.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.su  stm32f4xx_it.cyclo  stm32f4xx_it.su  subdir.mk  sx1278.cyclo  sx1278.d  sx1278.su  telemetry.cyclo  telemetry.d  telemetry.su
